@@ -1,9 +1,9 @@
 /**
  * @test  /nodynamiccopyright/
- * @bug 8242478
+ * @bug 8242478 8246774
  * @summary test for local interfaces
- * @compile/fail/ref=LocalInterface.out -XDrawDiagnostics LocalInterface.java
- * @compile --enable-preview -source ${jdk.version} LocalInterface.java
+ * @compile/fail/ref=LocalInterface.out -XDrawDiagnostics -source 15 LocalInterface.java
+ * @compile LocalInterface.java
  */
 class LocalInterface {
     void m() {
